Resolved styling issues, still resolving gaps with A&A
-Discovered issue with REM based styling on PPIs greater than 93, even
at widescreen, made changes to accomdoate.

-Conintuing to work on the problem with A&A not co-operating.  I
suspect that the example I use is actually broken and possibly
abandoned.  Focusing on rebuilding the logic and getting a better
understanding of the underlying Express.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -299,9 +299,9 @@ html {
   @media (max-width: 1250px) {
     html {
       font-size: 10px; } }
-  @media (min-width: 1250px) and (max-width: 1300px) {
+  @media (min-resolution: 110) {
     html {
-      font-size: 13px; } }
+      font-size: 75%; } }
 
 body {
   height: 100%; }
